# ayon-slack

./: .gitignore  LICENSE  README.md  __init__.py  create_package.py  mkdocs.yml  package.py  pyproject.toml  ruff.toml  settings.py  versions.json
.github/workflows/: deploy_mkdocs.yml
1.1.3/: 404.html  index.html  license.html  objects.inv
1.1.3/autoapi/: summary.html
1.1.3/autoapi/client/ayon_slack/: index.html  slack_addon.html  version.html
1.1.3/autoapi/server/: index.html
1.1.3/autoapi/server/settings/: index.html  main.html  (+1 more)
1.1.3/search/: search_index.js  search_index.json
1.3.0/: 404.html  index.html  license.html  objects.inv
1.3.0/autoapi/: summary.html
1.3.0/autoapi/server/: index.html
1.3.0/search/: search_index.js  search_index.json
1.3.1/: 404.html  index.html  license.html
1.3.1/autoapi/: summary.html
1.3.1/autoapi/server/: index.html
1.3.1/search/: search_index.js  search_index.json
client/: pyproject.toml
client/ayon_slack/: __init__.py  manifest.yml  slack_addon.py  slack_module.py  version.py
client/ayon_slack/launch_hooks/: pre_python2_vendor.py
client/ayon_slack/plugins/publish/: collect_slack_family.py  integrate_slack_api.py
client/openpype_slack/: slack_module.py
dev/: settings.py
server/: __init__.py
server/settings/: __init__.py  conversions.py  main.py  publish_plugins.py
settings/: main.py  publish_plugins.py
test-build/: 404.html  index.html  license.html
test-build/autoapi/: summary.html
test-build/autoapi/server/: index.html
test-build/search/: search_index.js  search_index.json
(+36 files in other folders)
