[tool.poetry]
name = "Slack"
version = "1.1.1-dev.1"
description = "Slack Addon"
authors = ["Ynput Team <team@ynput.io>"]
license = "MIT License"
homepage = "https://ynput.io"
documentation = "https://github.com/ynput/ayon-slack/blob/develop/README.md"
repository = "https://github.com/ynput/ayon-slack/tree/develop"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
